syntax = "proto3";

package server;

import "google/protobuf/wrappers.proto";

option go_package = "internal/api/v1";

service IdentityProvider {
  rpc SignUp(SignUpRequest) returns (JWTokens) {}
  rpc Login(LoginRequest) returns (JWTokens) {}
  rpc Verify(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
  rpc Refresh(google.protobuf.StringValue) returns (JWTokens) {}
  rpc Revoke(google.protobuf.StringValue) returns (google.protobuf.BoolValue) {}
}

message JWTokens{
  string access = 1;
  string refresh = 2;
}
message SignUpRequest {
  string email = 1;
  string password = 2;
  string role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}